--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "l-hub",
   "displayName": "L-Hub",
-  "description": "MCP AI Bridge — smart multi-model routing for Antigravity & VS Code",
+  "description": "MCP AI Bridge — smart multi-model routing for Antigravity",
+  "author": "Ready Steady Science",
   "version": "0.0.9",
   "icon": "images/logo.png",
   "publisher": "readysteadyscience",
@@ -18,7 +19,8 @@
   ],
   "main": "./dist/extension.js",
   "activationEvents": [
-    "onStartupFinished"
+    "*",
+    "onCommand:l-hub.openPanel"
   ],
   "contributes": {
     "commands": [
