chore: add license field, GitHub Actions release workflow, RELEASE_WORKFLOW.md

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "MCP AI Bridge — smart multi-model routing for Antigravity",
   "author": "Ready Steady Science",
   "version": "0.1.0",
+  "license": "MIT",
   "icon": "images/logo.png",
   "publisher": "readysteadyscience",
   "repository": {
